--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"dependencies": {
 		"cors": "2.8.5",
 		"decimal.js": "10.3.1",
-		"express": "4.17.1",
+		"express": "^4.17.1",
 		"fs-extra": "10.0.0",
 		"jszip": "3.7.1",
 		"parse5": "6.0.1"
